# ralph

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh  prd.json  progress.txt
.github/workflows/: ci.yml  release.yml
examples/: README.md
src/: interactive_guidance.rs  lib.rs  main.rs  runner.rs
src/audit/: api.rs  architecture.rs  dependencies.rs  documentation.rs  interactive.rs  inventory.rs  languages.rs  mod.rs  patterns.rs  testing.rs
src/audit/detectors/: mod.rs
src/audit/output/: agent_context.rs  markdown.rs  mod.rs  structured.rs
src/checkpoint/: mod.rs
src/error/: detector.rs  mod.rs
src/integrations/: linear.rs  mod.rs
src/mcp/: executor.rs  mod.rs  server.rs
src/mcp/resources/: mod.rs
src/mcp/tools/: audit.rs  executor.rs  load_prd.rs  mod.rs  run_all.rs
src/notification/: mod.rs  renderer.rs
src/parallel/: conflict.rs  dependency.rs  inference.rs  reconcile.rs  scheduler.rs
src/pause/: mod.rs
src/quality/: gates.rs  mod.rs  profiles.rs
src/ui/: collapsible.rs  colors.rs  display.rs  help.rs  iteration_view.rs  keyboard.rs  kitty_graphics.rs  mascot.rs  mod.rs  parallel_display.rs  parallel_events.rs  parallel_status.rs  spinner.rs  tui_runner.rs
src/ui/tui/: animation.rs  app.rs  mod.rs  progress.rs  widgets.rs
