[package]
name = "ralph"
version = "0.1.0"
edition = "2021"
description = "Enterprise-ready autonomous AI agent framework"
license = "MIT"
repository = "https://github.com/your-org/ralph"

[dependencies]
clap = { version = "4", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "ralph"
path = "src/main.rs"
